//
// PROJECT:         Aspia
// FILE:            proto/client_config.proto
// LICENSE:         Mozilla Public License Version 2.0
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

import "auth_session.proto";
import "desktop_session.proto";

package aspia.proto;

message ClientConfig
{
    string address                 = 1;
    uint32 port                    = 2;
    string username                = 3;
    auth.SessionType session_type  = 4;
    desktop.Config desktop_session = 5;
}
